hard-gists/50abbd0ad3c16c5dee55/run.log
=== Docker Run Log for 50abbd0ad3c16c5dee55 ===
Started at: Mi 29. Okt 15:22:04 CET 2025

[2025-10-29 15:22:05] START: Running container for 50abbd0ad3c16c5dee55
[2025-10-29 15:22:05] SUCCESS: Container d86abe6b2dc7b1bca0c7b8954c21b88709e57b22fd7117d3057a72f9da5d68d5 started for 50abbd0ad3c16c5dee55
=== Container logs for 50abbd0ad3c16c5dee55 ===
  File "/snippet.py", line 8
    print "Fatal error: ", e
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 50abbd0ad3c16c5dee55 ===
[2025-10-29 15:22:07] INFO: Container d86abe6b2dc7b1bca0c7b8954c21b88709e57b22fd7117d3057a72f9da5d68d5 has stopped
